final/final-assessment.yaml
apiVersion: v1
kind: Service
metadata:
  name: final
  labels:
    app: final
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: final
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: final
spec:
  selector:
    matchLabels:
      app: final
  replicas: 3
  template:
    metadata:
      labels:
        app: final
    spec:
      containers:
      - name: final
        image: nginx:latest
        ports:
        - containerPort: 80
      nodeSelector:
        kubernetes.io/hostname: <nama vm>
